--- a/ProyectoMG.ipynb
+++ b/ProyectoMG.ipynb
@@ -26,7 +26,7 @@
         "id": "dX3PnkixBEkJ",
         "outputId": "0a25ae10-c836-4eb8-f333-739ad4c760ff"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "ZfZjHdmWcaQx"
       },
@@ -89,7 +89,7 @@
         "id": "598ypsVEZ4W9",
         "outputId": "83a3e86f-bf91-401a-cb9a-374403b0addf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,6 +126,7 @@
         "newData_in = newData_in.drop(labels = 'Name', axis = 1)\n",
         "newData_in = pds.get_dummies(newData_in, dtype = int)\n",
         "dataTypeValues = newData_in.values.tolist()\n",
+        "dataTypeValues = list(newData_in.itertuples(index = False, name = None))\n",
         "\n",
         "print(dataTypeValues)\n",
         "print(len(dataTypeValues))\n"
@@ -137,7 +138,7 @@
         "id": "i823lnOqB4by",
         "outputId": "5b310297-3085-44e1-99b9-b2437b9b9e50"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +163,7 @@
         "outputId": "3d56746b-dab0-4a66-d3ba-cb4154b8fc68",
         "id": "Rn3MJpqqP-pM"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
